# gatt

./: CHANGELOG.md  STRATEGIC-VERDICT-2026-05-11-v2.md  STRATEGIC-VERDICT-2026-05-11.md  about.html  index.html  llms.txt
api/v1/: snapshot.json  tci.json
data/: tci-latest.json
data/snapshots/: 2026-04-02.json  2026-04-20.json  2026-05-09.json  2026-05-10.json
paper/: 01-introduction.md  02-related-work-additions-v1.3.md  02-related-work.md  03-methodology.md  04-findings.md  05-tension.md  06-discussion.md  07-conclusion.md  ARXIV_SUBMISSION.md  OUTREACH-TEMPLATES.md  PAPER-FULL-zh.md  PAPER-FULL.md  README.md  RESPONSE-TO-REVIEWERS-v1.0.md  abstract.md  appendix-a-vendors.md  appendix-b-token-gdp-example.md  appendix-c-bayesian-sensitivity.md  build_tex.py  check_tex.py  main.tex  outline.md  references.bib
paper/scripts/: bayesian_sensitivity.py  token_gini.py
seo/: token-economy-landing-draft.md
stu/: README.md  pyproject.toml
stu/stu_matrix/: __init__.py  run_phase1.py  specs.py
substack/: 01-jensen-named-it-draft.md
